# spacetimedb-game-demo

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
api/auth/: .env  Cargo.toml  README.md
api/auth/cert/: private_key.pem
api/auth/migrations/: 20250709100951_create_users_tokens.sql
api/auth/src/: main.rs  shared.rs
api/auth/src/db/: mod.rs  user.rs
api/auth/src/routers/: mod.rs
api/auth/src/routers/stdb/: character_token_handler.rs  mod.rs  transfer_character.rs
api/auth/src/routers/user/: authenticate.rs  generate_tokens.rs  mod.rs  renew_tokens.rs
api/auth/src/tools/: header.rs  password.rs  validate_tokens.rs
auth-server/: .env  Cargo.toml  README.md
auth-server/migrations/: 20250709100951_create_users_tokens.sql  20250715182627_character.sql
auth-server/src/: error.rs  main.rs  shared.rs
auth-server/src/db/: character.rs  mod.rs  schemas.rs
auth-server/src/routers/stdb/: character_token_handler.rs  jwks.rs  mod.rs  transfer_character.rs
auth-server/src/routers/stdb/character/: create.rs  mod.rs  select.rs
auth-server/src/routers/user/: authenticate.rs  generate_tokens.rs  register_user.rs  renew_tokens.rs
auth-server/src/routes/: authenticate.rs  identity.rs  mod.rs  register_user.rs  renew_tokens.rs  shared.rs
auth-server/src/routes/stdb/: identity.rs  jwks.rs  mod.rs
auth-server/src/routes/user/: authenticate.rs  generate_tokens.rs  mod.rs  register_user.rs  renew_tokens.rs
auth-server/src/tools/: header.rs  jwk_builder.rs  mod.rs  validate.rs  validate_tokens.rs
client/: Cargo.toml  Dockerfile
client-launcher/: .env  Cargo.toml
client-launcher/src/: main.rs  security.rs
client-launcher/src/pages/: login_page.rs  mod.rs  register_page.rs
client/src/: main.rs
client/src/asset_loader/: mod.rs
client/src/module_bindings/: character_movement_state_type.rs  character_movement_table.rs  character_type.rs  characters_table.rs  create_character_reducer.rs  identity_binding_type.rs  identity_bindings_table.rs  identity_connected_reducer.rs  mod.rs  player_movement_state_type.rs  player_movement_table.rs  player_table.rs  player_type.rs  register_player_reducer.rs  select_character_reducer.rs  user_account_type.rs  user_accounts_table.rs
client/src/stdb/: mod.rs
client/src/stdb/module_bindings/: character_movement_state_type.rs  character_movement_table.rs  character_type.rs  characters_table.rs  create_character_reducer.rs  identity_binding_type.rs  identity_bindings_table.rs  identity_connected_reducer.rs  identity_disconnected_reducer.rs  mod.rs  select_character_reducer.rs  user_account_type.rs  user_accounts_table.rs
game/server/: .env  Cargo.toml
game/server/src/: lib.rs
game/server/src/character_logic/: mod.rs  reducer.rs  tables.rs
server/: .env  (+3 more)
(+40 files in other folders)
