[package]
name = "auth-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4"}
tokio = { version = "1.46.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
chrono = { version = "0.4.41", features = ["serde"]}
uuid = { version = "1.7", features = ["v4"] }


argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
serde = "1.0.219"
tracing-subscriber = "0.3.19"
once_cell = "1.21.3"
log = "0.4.27"
anyhow = "1.0.98"


