[package]
name = "client-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
reqwest = { version= "0.12.22", features = ["json", "cookies", "rustls-tls"]  }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
clap = { version = "4.5.41", features = ["derive"] }
color-eyre = "0.6.5"
keyring = "3.6.2"
