[package]
name = "client-stdb-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../../shared" }

spacetimedb = { version = "1.2.0", features = ["unstable"] }
log = "0.4"
once_cell = "1.21.3"
fxhash = "0.2.1"
argon2 = "0.5.3"
dotenv = "0.15.0"



